manifests/apigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway-service
spec:
  selector:
    app: "apigateway-app"
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  type: NodePort
