manifests/apigateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-ingress
  namespace: thesiswork
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      # Forward client IP address
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;

      # Forward original host requested by the client
      proxy_set_header Host $host;

      # Forward original scheme (http or https)
      proxy_set_header X-Forwarded-Proto $scheme;

      # Forward original port
      proxy_set_header X-Forwarded-Port $server_port;

      # Forward Origin header
      proxy_set_header Origin $http_origin;

      # Forward User-Agent header
      proxy_set_header User-Agent $http_user_agent;

      # Forward Referer header
      proxy_set_header Referer $http_referer;

      # Prevent buffering to enhance performance
      proxy_buffering off;
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apigateway-service
            port:
              number: 80
